--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,10 @@ html {
 nav {
     margin: auto;
     padding: 1em 5em;
-    background-color: #19211e;
-    color: white;
+    background-color: #1f2937;
+    color: #F9FAF8;
     display: flex;
     gap: 3em;
-    /* justify-content: space-evenly; */
     align-items: center;
     position: sticky;
     top: 0;
@@ -28,11 +27,10 @@ nav {
 
 nav li {
     list-style: none;
-    /* padding: 0 1em; */
 }
 
 nav li a {
-    color: white;
+    color: #E5E7EB;
     text-decoration: none;
 }
 
@@ -47,9 +45,8 @@ nav:first-child li:last-child {
     padding: 2.5em 5em;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 4;
 
-    /* justify-content: center; */
 
 }
 
@@ -64,14 +61,14 @@ nav h1 {
 
 nav ul {
     flex: 2;
+    justify-content: space-evenly;
 }
 
-nav .search-bar {
+.search-bar {
     flex: 1;
     display: flex;
     align-items: center;
     height: 3em;
-    /* overflow: hidden; */
 }
 
 .search-bar input {
@@ -79,18 +76,17 @@ nav .search-bar {
     padding: 0 1em;
     height: 100%;
     background-color: #19211e;
-    color: white;
+    color: #E5E7EB;
     border: 2px solid #474d4b;
     border-top-left-radius: 5em;
     border-bottom-left-radius: 5em;
 }
 
 .search-bar button {
-    /* outline: none; */
     background-color: #ff4c4c;
     border: 2px solid #474d4b;
 
-    color: white;
+    color: #E5E7EB;
     border: none;
     padding: 0 1em;
     height: 100%;
@@ -108,6 +104,33 @@ nav .search-bar {
     cursor: pointer;
 }
 
+.hidden-menu{
+    width: 100%;
+    background-color: #03030350;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    transform: translateY(-100vh);
+    transition: 1s all;
+}
+.hidden-menu li{
+    padding: 1.5em 0;
+}
+
+.hidden-menu li:hover{
+    background-color: #333836;
+}
+
+.menu-icon:hover .hidden-menu{
+    transform: translateY(18vh);
+}
+.hidden-menu .search-bar{
+    
+}
+
 @media screen and (max-width: 1160px) {
     .sticky-nav {
         padding: 2.5em 20vw;
@@ -115,13 +138,14 @@ nav .search-bar {
     }
 
     nav ul,
-    nav .search-bar {
+    nav>.search-bar {
         display: none;
     }
 
     .menu-icon {
         display: block;
     }
+    
 }
 
 @media screen and (max-width: 991px) {
@@ -154,4 +178,12 @@ nav .search-bar {
         text-align: center;
     }
 
+}
+
+/* footer */
+footer{
+    padding: 2em 0;
+    text-align: center;
+    background-color: #1f2937;
+    color: #F9FAF8;
 }
