--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ nav li {
 nav li a {
     color: #E5E7EB;
     text-decoration: none;
+    font-size: 18px;
 }
 
 nav:first-child li:last-child {
@@ -56,7 +57,7 @@ nav ul {
 
 nav h1 {
     flex: 1;
-    font-size: 2rem;
+    font-size: 24px;
 }
 
 nav ul {
