--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,14 @@ nav li {
     list-style: none;
 }
 
-nav li a {
+nav a {
     color: #E5E7EB;
     text-decoration: none;
     font-size: 18px;
+}
+
+a.active{
+    color: #ff4c4c;
 }
 
 nav:first-child li:last-child {
@@ -58,6 +62,7 @@ nav ul {
 nav h1 {
     flex: 1;
     font-size: 24px;
+    color: #F9FAF8;
 }
 
 nav ul {
