--- a/contact.css
+++ b/contact.css
@@ -1,13 +1,18 @@
 .flex-container {
     display: flex;
     justify-content: center;
+    background-color: #19211E;
 }
 
 .title-style {
-    font-size: 48px;
-    line-height: 58px;
-    font-weight: bold;
     text-align: center;
+    font-size: 36px;
+    font-weight: bold;
+    color: #1F2937;
+    background-color: #18201D;
+    color: white;
+    padding-top: 10px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .title-style span {
@@ -17,23 +22,63 @@
 .form-container {
     display: flex;
     flex-wrap: wrap;
-    margin: 10px;
+    margin-bottom: 10px;
+    max-width: 500px;
+    justify-content: center;
 }
 
 .input-container {
     width: 100%;
-    height: 30px;
+    height: 40px;
     margin: 10px;
+    font-family: 'Roboto', 'sans-serif';
+    background-color: #0E1210;
+    border-radius: 10px;
+    border-color: #3E4140;
+    padding: 10px;
 }
 
 .textarea-container {
     width: 100%;
-    height: 200px;
+    height: 150px;
     margin: 10px;
+    font-family: 'Roboto', 'sans-serif';
+    background-color: #0E1210;
+    border-radius: 10px;
+    border-color: #3E4140;
+    padding: 10px;
+    resize: none;
+}
+
+.button-style {
+    background-color: #3882F6;
+    color: white;
+    border: solid 1px;
+    border-color: white;
+    border-radius: 10px;
+    padding: 5px;
+    font-family: 'Roboto', 'sans-serif';
 }
 
 .container-right {
     border: solid 1px;
     margin: 10px;
     border-radius: 20px;
+    background-color: #0E1210;
+    padding: 10px;
+}
+
+.contact-container {
+    padding: 10px;
+    
+}
+
+.contact-title {
+    color: white;
+}
+
+.contact-text {
+    color: white;
+    text-decoration: none;
+    letter-spacing: 0px;
 }
