--- a/contact.css
+++ b/contact.css
@@ -84,3 +84,49 @@
     text-decoration: none;
     letter-spacing: 0px;
 }
+
+.contact-hero {
+    height: 50vh;
+    background-color: #1F2937;
+    position: relative;
+    overflow: hidden;
+}
+
+.contact-hero img {
+    position: absolute;
+    width: 100%;
+    opacity: 0.6;
+    z-index: 2;
+    filter: sepia(2);
+}
+
+.title {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    z-index: 3;
+    position: relative;
+}
+
+.title h1{
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: bolder;
+}
+.title h3{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.map-frame {
+    margin-bottom: 5%;
+}
+
+@media only screen and (max-width: 768px) {
+    .map-frame {
+        margin-bottom: 15%;
+    }
+}
