--- a/styles.css
+++ b/styles.css
@@ -259,13 +259,10 @@ nav ul {
 
 /* footer */
 footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
-    height: 10%;
+    min-height: 100px;
     background-color: #1f2937;
     color: white;
     text-align: center;
-
+    padding: 20px;
 }
