--- a/styles.css
+++ b/styles.css
@@ -270,9 +270,9 @@ footer{
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 10%;
+    /* height: 10%; */
     background-color: #1f2937;
     color: white;
     text-align: center;
-
+padding: 1.5em;
 }
