--- a/contact.css
+++ b/contact.css
@@ -88,7 +88,6 @@
 .contact-hero img {
     position: absolute;
     width: 100%;
-    height: 100%;
     opacity: 0.6;
     z-index: 2;
     filter: sepia(2);
@@ -122,5 +121,8 @@
     }
     .contact-sidebar, .contact-main{
         width: 100%;
+    }
+    .contact-hero img {
+        height: 100%;
     }
 }
