Font fix on contact inputs

--- a/contact.css
+++ b/contact.css
@@ -16,7 +16,7 @@
     width: 100%;
     height: 40px;
     margin: 10px;
-    font-family: 'Roboto', 'sans-serif';
+    font-family: 'Roboto Condensed';
     background-color: #19211E;
     border-radius: 10px;
     border-color: #3E4140;
@@ -29,7 +29,7 @@
     width: 100%;
     height: 150px;
     margin: 10px;
-    font-family: 'Roboto', 'sans-serif';
+    font-family: 'Roboto Condensed';
     background-color: #19211E;
     border-radius: 10px;
     border-color: #3E4140;
