--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     letter-spacing: 3px;
 }
