--- a/index.css
+++ b/index.css
@@ -1,18 +1,22 @@
 .index-main-content {
     font-family: 'Roboto', sans-serif;
 
+    .center-75 {
+        width: 75%;
+        margin: auto;
+    }
+
     > h3.title-style {
-        font-size: 48px;
+        font-size: 36px;
+        font-weight: 900;
+        color: #1F2937;
         line-height: 58px;
         font-weight: bold;
+        text-align: center;
     }
 
     > h3.title-style span {
         font-weight: 100;
-    }
-
-    .text-center {
-        text-align: center;
     }
 
     .flex-container {
@@ -55,13 +59,14 @@
     .quote-container-child {
         display: flex;
         flex-direction: column;
-        width: 100%;
+        width: 45%;
         margin: auto;
+        padding: 40px 0px;
     }
 
     .quote-content {
         text-align: left;
-        font-size: 36px;
+        font-size: 24px;
         color: #1F2937;
         font-weight: 300;
         font-style: italic;
@@ -80,24 +85,39 @@
     }
 
     .sign-up-child-container {
-        background-color: #2183ec;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        padding: 30px;
-        max-width: 75%;
-        margin: auto;
+        background-color: #3882F6;
+        padding: 30px 0px;
         border-radius: 5px;
     }
 
+    .sign-up-flex-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .sign-up-left-container {
+
+    }
+
+    .sign-up-right-container {
+
+    }
+
     .sign-up-button {
-        background-color: #2183ec;
+        background-color: #3882F6;
         color: white;
         font-size: 11px;
         border: 1px solid white;
         border-radius: 6px;
         padding: 5px 20px;
         margin: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    .sign-up-button:hover {
+        background-color: #5090f7;
     }
 
     .sign-up-title{
@@ -112,8 +132,6 @@
         font-size: 15px;
         margin-right: 50px;
     }
-
-    /* <600px, 601px, 768px, 992px, 1200px */
 
     @media (max-width: 600px) {
         > h3.title-style {
