--- a/styles.css
+++ b/styles.css
@@ -133,9 +133,6 @@ nav ul {
 .menu-icon:hover .hidden-menu{
     transform: translateY(18vh);
 }
-.hidden-menu .search-bar{
-    
-}
 
 @media screen and (max-width: 1160px) {
     .sticky-nav {
@@ -188,14 +185,12 @@ nav ul {
 
 /* footer */
 footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
-    height: 10%;
+    min-height: 100px;
     background-color: #1f2937;
     color: white;
     text-align: center;
+    padding: 20px;
     
 
 }
