--- a/about.css
+++ b/about.css
@@ -1,3 +1,63 @@
+.contact-main-content {
+    background-color: #E5E7EB;
+    padding: 5em;
+    display: flex;
+    font-size: 26px;
+}
+
+.title {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    z-index: 3;
+    position: relative;
+}
+
+.title h1{
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: bolder;
+}
+.title h3{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.contact-main {
+    width: 50%;
+    padding: 1.5em;
+    display: flex;
+    margin-right: auto;
+}
+
+.contact-sidebar {
+    padding: 1.5em;
+    width: 35%;
+}
+
+.container-right {
+    width: 35%;
+}
+
+.contact-container {
+    padding: 20px;
+}
+
+.contact-title {
+    color: white;
+    font-size: 36px;
+}
+
+.contact-text {
+    color: white;
+    text-decoration: none;
+    letter-spacing: 0px;
+    font-size: 18px;
+}
+
 .contact-hero {
     height: 50vh;
     background-color: #1F2937;
@@ -22,46 +82,16 @@
     text-align: center;
     z-index: 3;
     position: relative;
+    color: white;
 }
 
-.container-about {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.title h1{
-    font-size: 48px;
-    color: #F9FAF8;
-    font-weight: bolder;
-}
-.title h3{
-    font-size: 18px;
-    color: #E5E7EB;
-}
-
-.items{
-    padding: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-}
-
-.items img{
-    border-radius: 20px;
-}
-
-.items {
-    font-size: 26px;
-    color: #1f2937;
-    background-color: #E5E7EB;
+.musician-image {
+    border-radius: 15px;
 }
 
 .welcome {
-    width: 50%;
-    padding: 1.5em;
-    display: flex;
-    flex-wrap: wrap;
+    color: black;
+    font-size: 26px;
 }
 
 .text {
@@ -79,7 +109,7 @@
     font-family: 'Roboto', 'sans-serif';
 }
 
-button:hover{
+.know-more:hover {
     background-color: #144492;
 }
 
@@ -90,8 +120,9 @@ button:hover{
 
 .sign-up-child-container {
     background-color: #3882F6;
-    padding: 30px 0px;
+    padding: 30px;
     border-radius: 5px;
+    margin: 20px;
 }
 
 .sign-up-flex-container {
@@ -130,47 +161,21 @@ button:hover{
 }
 
 
-@media (max-width: 600px) {
-    .sign-up-child-container {
-        flex-direction: column;
-        padding: 18px 0px;
-    }
-
-    .sign-up-title {
-        text-align: center;
-        font-size: 16px;
-    }
-
-    .sign-up-content {
-        margin-right: auto;
-        text-align: center;
-        font-size: 12px;
-    }
-
-    .sign-up-left-container {
-        padding-right: 5px;
-    }
-
-    .sign-up-right-container {
-        padding-left: 5px;
-    }
-
-
-    .sign-up-button {
-        width: 80px;
-        margin: auto;
-    }
-
-    .sign-up-right-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-left: 5px;
-    }
-}
-
 @media screen and (max-width:992px){
+    .contact-main-content{
+        flex-direction: column;
+        padding: 1em;
+    }
+    .contact-main{
+        width: 100%;
+        padding: 0;
+        text-align: center;
+        margin-bottom: 25px;
+    }
     .contact-hero img {
         height: 100%;
+    }
+    .musician-image {
+        width: 100%;
     }
 }
