--- a/loginandsignup.css
+++ b/loginandsignup.css
@@ -1,8 +1,9 @@
 .background-image {
+    background-color: #333;
     z-index: -1;
     position: absolute;
-    height: 100vh;
-    width: 1200px;
+    height: auto;
+    width: 100%;
     display: flex;
 }
 
