modified:   loginandsignup.css

--- a/loginandsignup.css
+++ b/loginandsignup.css
@@ -5,6 +5,7 @@
     height: auto;
     width: 100%;
     display: flex;
+    max-height: 100vh;
 }
 
 .background-image img {
@@ -12,7 +13,6 @@
 }
 
 .container {
-    
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
