--- a/about.css
+++ b/about.css
@@ -1,3 +1,12 @@
+.center-75 {
+        width: 75%;
+        margin: auto;
+}
+
+.contact-parent-container {
+    padding: 2% 0%;
+}
+
 .contact-main-content {
     background-color: #E5E7EB;
     padding: 5em;
@@ -115,14 +124,13 @@
 
 .sign-up-container {
     align-items: center;
-    padding: 2% 0%;
+    padding-bottom: 2%;
 }
 
 .sign-up-child-container {
     background-color: #3882F6;
-    padding: 30px;
+    padding: 30px 0px;
     border-radius: 5px;
-    margin: 20px;
 }
 
 .sign-up-flex-container {
@@ -160,8 +168,7 @@
     margin-right: 50px;
 }
 
-
-@media screen and (max-width:992px){
+@media (max-width:1340px){
     .contact-main-content{
         flex-direction: column;
         padding: 1em;
@@ -177,5 +184,33 @@
     }
     .musician-image {
         width: 100%;
+    }
+}
+
+
+@media screen and (max-width:992px){
+    .sign-up-title {
+        font-size: 16px
+    }
+
+    .sign-up-content {
+        font-size: 12px;
+        margin-right: auto;
+    }
+
+    .sign-up-right-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-left: 5px;
+    }
+
+    .sign-up-button {
+        width: 80px;
+    }
+}
+
+@media (max-width:492px) {
+    .sign-up-content {display: none;
     }
 }
