--- a/index.css
+++ b/index.css
@@ -6,16 +6,15 @@
         margin: auto;
     }
 
-    > h3.title-style {
+    .title-style {
         font-size: 36px;
         font-weight: 900;
         color: #1F2937;
         line-height: 58px;
-        font-weight: bold;
         text-align: center;
     }
 
-    > h3.title-style span {
+    .title-style span {
         font-weight: 100;
     }
 
