--- a/styles.css
+++ b/styles.css
@@ -161,8 +161,8 @@ nav ul {
 
 @media screen and (max-width: 1160px) {
     .sticky-nav {
-        padding: 2.5em 20vw;
-
+        padding: 2.5em;
+        justify-content: space-evenly;
     }
 
     nav ul,
@@ -172,6 +172,10 @@ nav ul {
 
     .menu-icon {
         display: block;
+    }
+
+    nav a{
+        font-size: 14px;
     }
 
 }
