--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     letter-spacing: 3px;
 }
@@ -9,6 +9,10 @@ html {
     padding: 0;
     box-sizing: border-box;
 }
+
+
+
+
 
 /* HEADER */
 
@@ -35,7 +39,7 @@ nav a {
     font-size: 18px;
 }
 
-a.active{
+a.active {
     color: #ff4c4c;
 }
 
@@ -75,12 +79,16 @@ nav ul {
     display: flex;
     align-items: center;
     height: 3em;
+    width: 75%;
+    margin: auto;
 }
 
 .search-bar input {
     outline: none;
     padding: 0 1em;
     height: 100%;
+    width: 100%;
+    margin: auto;
     background-color: #19211e;
     color: #E5E7EB;
     border: 2px solid #474d4b;
@@ -94,7 +102,7 @@ nav ul {
 
     color: #E5E7EB;
     border: none;
-    padding: 0 1em;
+    padding: 0 1.5em 0 1em;
     height: 100%;
     border-top-right-radius: 5em;
     border-bottom-right-radius: 5em;
@@ -110,7 +118,7 @@ nav ul {
     cursor: pointer;
 }
 
-.hidden-menu{
+.hidden-menu {
     width: 100%;
     background-color: #03030350;
     position: absolute;
@@ -122,25 +130,40 @@ nav ul {
     transform: translateY(-100vh);
     transition: 1s all;
 }
-.hidden-menu li{
+
+.hidden-menu li {
     padding: 1.5em 0;
 }
 
-.hidden-menu li:hover{
+.hidden-menu li:hover {
     background-color: #333836;
 }
 
-.menu-icon:hover .hidden-menu{
+.menu-icon:hover .hidden-menu {
     transform: translateY(18vh);
 }
-.hidden-menu .search-bar{
-    
+
+
+.icons {
+    filter: invert();
 }
+
+.login-register-icon {
+    display: flex;
+    gap: 5px;
+    height: 24px;
+}
+
+.login-register-icon img {
+    height: 100%;
+}
+
+
 
 @media screen and (max-width: 1160px) {
     .sticky-nav {
-        padding: 2.5em 20vw;
-
+        padding: 2.5em;
+        justify-content: space-evenly;
     }
 
     nav ul,
@@ -151,7 +174,11 @@ nav ul {
     .menu-icon {
         display: block;
     }
-    
+
+    nav a{
+        font-size: 14px;
+    }
+
 }
 
 @media screen and (max-width: 991px) {
@@ -159,7 +186,7 @@ nav ul {
         display: none;
     }
 
-   
+
 
 }
 
@@ -170,10 +197,11 @@ nav ul {
         text-align: center;
         gap: 1em;
     }
-    
+
 }
+
 @media screen and (max-width: 500px) {
-    
+
 
     nav li {
         padding: 0;
@@ -186,16 +214,18 @@ nav ul {
 
 }
 
+@media screen and (max-width:992px) {
+    .fa-solid {
+        margin: 5px;
+    }
+}
+
 /* footer */
-footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
+footer {
     width: 100%;
-    height: 10%;
+    min-height: 80px;
     background-color: #1f2937;
     color: white;
     text-align: center;
-    
-
+    padding: 20px;
 }
